# conclave-core-sdk

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  build.gradle  common.gradle  gradle.properties  gradlew  integration-tests-common.sh  integration-tests-dcap.sh  integration-tests.sh  mkdocs.yml  script.sh  settings.gradle  test-conclave-init.sh  test-sdk-cordapp.sh  test-sdk.sh  versions.gradle
cpp/: CMakeLists.txt  Determinise.cmake  build.gradle  conclave-gdb  conclave-gdb-attach  sgx-gdb
cpp/binutils/: CMakeLists.txt
cpp/cmake/: Determinise.cmake  GoogleTest.cmake  TargetTest.cmake
cpp/cygwin/: README.md  cygwin-build-signtool.sh  cygwin-package-setup.sh  download.cygwin  linux-sgx.cygwin.patch  opensslw
cpp/cygwin/ldscripts/: elf_x86_64.x  elf_x86_64.xbn  elf_x86_64.xc  elf_x86_64.xce  elf_x86_64.xd  elf_x86_64.xdc  elf_x86_64.xdce  elf_x86_64.xde  elf_x86_64.xdw  elf_x86_64.xdwe  elf_x86_64.xe  elf_x86_64.xn  elf_x86_64.xs  elf_x86_64.xsc  elf_x86_64.xsce  elf_x86_64.xse  elf_x86_64.xsw  elf_x86_64.xswe  elf_x86_64.xw  elf_x86_64.xwe
cpp/dummy/: CMakeLists.txt
cpp/dummy-host/: CMakeLists.txt
cpp/dummy-host/src/: dummy_host.cpp
cpp/dummy/resources/: enclave.xml
cpp/fatfs/: README.md
cpp/fatfs/common/include/: common.hpp  diskio.hpp  diskio_ext.hpp  fatfs_file_manager.hpp  fatfs_result.hpp  ff.hpp  ffconf.hpp
cpp/fatfs/common/src/: diskio.cpp  fatfs_file_manager.cpp  ff.cpp  ffsystem.cpp  ffunicode.cpp
cpp/fatfs/enclave/: CMakeLists.txt
cpp/fatfs/enclave/include/: disk.hpp  fatfs_ram.hpp  inmemory_disk.hpp  persistent_disk.hpp
cpp/fatfs/host/: CMakeLists.txt
cpp/jvm-edl/: CMakeLists.txt  README.md
cpp/jvm-edl/src/: jvm.edl  jvm_debug.edl  jvm_enclave.cpp  jvm_release.edl  start_thread.edl
cpp/jvm-enclave-avian/: CMakeLists.txt
cpp/jvm-enclave-avian/generated_dlsym/: dlsym.cpp  dlsym.txt
cpp/jvm-enclave-avian/generated_stubs/: stubs.cpp  stubs.txt
cpp/jvm-enclave-avian/resources/: dlsym.cpp.template  gen_dlsym.py  gen_repeatable_jar.sh  gen_stubs.py  stubs.cpp.template
cpp/jvm-enclave-avian/src/: debug_utils.cpp  edl.cpp  fcntl.cpp  jvm_enclave_avian.cpp  os_support.cpp  singleton_jvm.cpp  sys_stat.cpp  unistd.cpp
cpp/jvm-enclave-common/: CMakeLists.txt  README.md  build.gradle
cpp/jvm-enclave-common/include/: aex_assert.h  conclave_tools.h  dlsym_symbols.h  enclave_jni.h  enclave_shared_data.h  enclave_thread.h  fcntl.h  os_support.h  sgx_scoped_lock.h  singleton_jvm.h  sys_stat.h  unistd.h  vm_enclave_layer.h
cpp/jvm-enclave-common/src/: dlsym_symbols.cpp  enclave_jni.cpp  enclave_shared_data.cpp  enclave_thread.cpp  file_manager.cpp  file_manager.h  memory_manager.cpp  memory_manager.h  vm_enclave_layer.cpp
cpp/jvm-enclave-common/stubs/: arpa_inet.cpp  ctype.cpp  dirent.cpp  dlfcn.cpp  fcntl.cpp  grp.cpp  ioctl.cpp  langinfo.cpp  libc.cpp  locale.cpp  mntent.cpp  pthread.cpp  pwd.cpp  sched.cpp  sched_cpucount.cpp  semaphore.cpp  signal.cpp  spawn.cpp  stdio.cpp  stdlib.cpp  string.cpp  sys_epoll.cpp  sys_mman.cpp  sys_poll.cpp  sys_resource.cpp  sys_sendfile.cpp  sys_socket.cpp  sys_stat.cpp  sys_time.cpp  sys_utsname.cpp  sys_vfs.cpp  sys_wait.cpp  sys_xattr.cpp  thread.cpp  time.cpp  unistd.cpp  utime.cpp
cpp/jvm-enclave-common/test/: conclave_tools-tests.cpp  enclave_shared_data-tests.cpp  memory_manager-tests.cpp
cpp/jvm-host/: CMakeLists.txt  README.md
cpp/jvm-host-enclave-common/: CMakeLists.txt  README.md
cpp/jvm-host-enclave-common/include/: enclave_init.h  jni_utils.h  sgx_device_status.h  sgx_errors.h  shared_data.h
cpp/jvm-host-enclave-common/src/: jni_utils.cpp  sgx_device_status.cpp  sgx_errors.cpp
cpp/jvm-host-shared/: CMakeLists.txt  README.md
cpp/jvm-host-shared/include/: cpu_info.h  enclave_platform.h  host_jni_shared.h
cpp/jvm-host-shared/src/: cpu_info.cpp  enclave_platform.cpp  host_jni_shared.cpp
cpp/jvm-host/include/: dcap.h  ecall_context.h  elf_types.h  enclave_metadata.h  fclose_guard.h  host_jni.h  host_shared_data.h  munmap_guard.h
cpp/jvm-host/src/: dcap.cpp  ecall_context.cpp  enclave_console.cpp  enclave_console.h  enclave_metadata.cpp  host_jni.cpp  host_shared_data.cpp  host_start_thread.cpp  sgx_cap.cpp
cpp/linux-sgx/: CMakeLists.txt  QuoteGen_makefile.patch  README.md  build.gradle  buildenv.mk  dcap_ql.patch  dcap_quote_wrapper_make.patch  dcap_quoteverify_cpp.patch  dcap_sgx_urts_wrapper_h.patch  dcap_source.patch  dcap_source_macos.diff  debug.diff  determinism.diff  dtv.patch  macos.diff  memset.patch  ndebug.diff  psw_aesm_make.patch  pthread_changes.diff  pthread_timed_wait.diff  sgx_sign_macos.diff  wget.diff
cpp/linux-sgx/linux-sgx-release/: build.gradle
cpp/macos-binutils/: CMakeLists.txt  build.gradle  ld-new
cpp/macos-sign-tool/: build.gradle  sgx_sign
cpp/native-binutils/: build.gradle
cpp/native-enclave/: build.gradle
cpp/native-enclave/native-enclave-release/: build.gradle
cpp/native-gdb/: build.gradle
cpp/native-host/: build.gradle
cpp/native-host-shared/: build.gradle
cpp/native-host/native-host-debug/: build.gradle
cpp/native-sign-tool/: build.gradle
cpp/native-substratevm/: build.gradle
cpp/native-substratevm/native-substratevm-simulation/: build.gradle
cpp/substratevm/: CMakeLists.txt  README.md
cpp/substratevm/include/: edl.h  graal_isolate.h  substrate_jvm.h
cpp/substratevm/src/: edl.cpp  fcntl.cpp  substrate_jvm.cpp  sys_stat.cpp  unistd.cpp
cpp/vm-enclave-layer/: CMakeLists.txt
cpp/vm-enclave-layer/include/: vm_enclave_layer.h
cpp/vm-enclave-layer/src/: file_manager.cpp  file_manager.h  memory_manager.cpp  memory_manager.h  sigthread.cpp  statvfs.cpp  vm_enclave_layer.cpp
cpp/vm-enclave-layer/stubs/: ctype.cpp  dirent.cpp  dlfcn.cpp  fcntl.cpp  libc.cpp  netdb.cpp  sched.cpp  signal.cpp  stdio.cpp  stdlib.cpp  string.cpp  sys_mman.cpp  sys_socket.cpp  sys_stat.cpp  sys_utsname.cpp  time.cpp  unistd.cpp
cpp/zlib/: CMakeLists.txt  README.md  zlib-CMakeLists.diff
gramine-cpp/: CMakeLists.txt  gramine_dcap.cpp  gramine_dcap.hpp  gramine_jni.cpp  gramine_jni.hpp  jni_utils.cpp  jni_utils.hpp
scripts/: az  (+51 more)
(+2171 files in other folders)
